--- a/styles/main/main.css
+++ b/styles/main/main.css
@@ -1,20 +1,67 @@
 .content {
     display:flex;
-
-}
-.fishies--image {
-    height: 200px;
-    width: 200px;
+    
+  
 
 }
 .fishies {
-    display: flex;
-    flex-wrap: wrap;
-    width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 60%;
+  justify-content: stretch;
+
+}
+.fishies--image{
+    height: 200px;
+    width: 200px;
+    justify-content: center;
+
+}
+.fishes {
+    /* display: flex; */
+    flex-wrap: flex;
+    /* width: 20%; */
     justify-content: space-evenly;
-    flex-basis: 66%;
+
     
+
   }
+  .nav {
+    display:flex;  
+    justify-content:space-evenly;
+  }
+.quotes {
+    border: 1px dotted black;
+    padding: 5px;
+    color:navy;
+}
+.tips {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-basis: 10%;
+    border: 4px dotted black;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.locations {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-top: 10px;
+  
+}
+.Locations__each {
+  flex-basis:25%;
+  justify-content: space-evenly;
+  border: 5px solid blue;
+  margin: 2px;
+  padding: 8px;
+  background-color: rgba(0,0,139,0.5);
+
+}
   aside{
     width: 30%;
     border: 1px solid darkblue;
